--- a/views/admin/pages/products/detail.pug
+++ b/views/admin/pages/products/detail.pug
@@ -23,7 +23,7 @@ block main
     if(product.position)
         p(class="mb-4") Vị trí: #{product.position}
     if(product.description)
-        p(class="mb-4") Mô tả: #{product.description}
+        p(class="mb-4") Mô tả: !{product.description}
         
     a(
         class="btn btn-warning"
