--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -4,6 +4,7 @@ include ../../mixins/search.pug
 include ../../mixins/pagination.pug
 include ../../mixins/form-change-multi.pug
 include ../../mixins/alert.pug
+include ../../mixins/sort.pug
 block main
   +alert-success("5000")
 
@@ -26,6 +27,13 @@ block main
               class="btn btn-primary"
             ) Thêm mới
 
+    .card.mb-3 
+       .card-header Sắp xếp 
+       .card-body
+        .row
+          +sort()
+
+
     table.table.table-hover.table-sm(checkbox-multi)
       thead
         tr
@@ -42,7 +50,8 @@ block main
         each item, index in products
           tr
             td: input(type="checkbox", name="ids", value=item.id)
-            td #{index + 1}
+            td #{pagination.limitItem * (pagination.currentPage - 1) + index + 1}
+
             td 
               img(src=item.thumbnail, alt=item.title, width="100", height="auto")
 
