--- a/views/admin/partial/slider.pug
+++ b/views/admin/partial/slider.pug
@@ -4,4 +4,8 @@
             li  
                 a(href=`${prefixAdmin}/dashboard`)  Tổng quan 
             li  
-                a(href=`${prefixAdmin}/products`)  Sản phẩm
+                a(href=`${prefixAdmin}/products`) Danh sách Sản phẩm
+            li 
+                a(href=`${prefixAdmin}/products-category`) Danh mục sản phẩm
+            li 
+                a(href=`${prefixAdmin}/roles`) Nhóm quyền
