--- a/views/client/partial/header.pug
+++ b/views/client/partial/header.pug
@@ -4,7 +4,7 @@ header.head
             .col-3 
                 .inner-logo 
                     a(href="/")
-                        img(src="/images/logo.svg" alt="Logo")
+                        img(src="/images/logo-dep-kinh-do.jpg" alt="Logo")
 
 
             .col-9 
